--- a/source/pages/homepage.njk
+++ b/source/pages/homepage.njk
@@ -5,19 +5,14 @@ permalink: /
 ---
 
 
-<div class="container">
-	<h1 class="mb-5">You are running an awesome 11ty site</h1>
 
-	<div class="row pb-5 border-bottom mb-5">
-		<div class="col-lg-6">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquet ipsum lacus, non finibus nisi congue quis. Phasellus gravida justo id metus aliquam pretium. Proin rhoncus pretium ligula, at semper felis feugiat et. Nulla vestibulum leo ex, non molestie sem tempor vel. Integer vel accumsan dolor. Suspendisse quam quam, bibendum eu ullamcorper eget, imperdiet at felis. Quisque at ultricies odio. Etiam sollicitudin eros ut risus molestie tristique. Nam ullamcorper ut quam et mollis.</p>
-		</div><!-- end col -->
 
-		<div class="col-lg-6">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquet ipsum lacus, non finibus nisi congue quis. Phasellus gravida justo id metus aliquam pretium. Proin rhoncus pretium ligula, at semper felis feugiat et. Nulla vestibulum leo ex, non molestie sem tempor vel. Integer vel accumsan dolor. Suspendisse quam quam, bibendum eu ullamcorper eget, imperdiet at felis. Quisque at ultricies odio. Etiam sollicitudin eros ut risus molestie tristique. Nam ullamcorper ut quam et mollis.</p>
-		</div><!-- end col -->
-	</div><!-- end row -->
+<div class="container-fluid">
+	<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FChicago&amp;src=MmhiYm42dW5ha2l0Y2c2Z2ZjdHFmMHZuNzhAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%234285F4&amp;showTitle=0&amp;showNav=1&amp;showDate=1&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0" style="filter: invert(1);margin-bottom:60px;" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
 
-	{# This is an example of a page component #}
-	{% include 'source/pages/page-components/latest-3-posts.njk' %}
+	<iframe style="width: 100%;height:500px;" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTD-0--ojZBVvOPDAzHT3byGVCvBHyzDz4bzRs5ds2tRY6G9bMGjEOJYf1gIuN4qZ0r_5Ol52bZYdYG/pubhtml?widget=true&amp;headers=false"></iframe>
 </div><!-- end container -->
+
+
+
+
