--- a/source/_includes/site-components/header.njk
+++ b/source/_includes/site-components/header.njk
@@ -3,8 +3,8 @@
 		<h1 class="col-auto mb-0"><a href="/">{{ metadata.title }}</a></h1>
 
 		<div class="col-auto">
-			<a href="/posts/" class="btn btn-primary">Posts</a>
-			<a href="/about/" class="btn btn-primary">About</a>
+			{#<a href="/posts/" class="btn btn-primary">Posts</a>#}
+			<a href="/calories/" class="btn btn-primary">Calories</a>
 		</div>
 	</div><!-- end row -->
 </header><!-- end container -->
