added new schedule

--- a/source/_includes/site-components/header.njk
+++ b/source/_includes/site-components/header.njk
@@ -4,6 +4,7 @@
 
 		<div class="col-auto">
 			{#<a href="/posts/" class="btn btn-primary">Posts</a>#}
+			<a href="/schedule/" class="btn btn-primary">Schedule</a>
 			<a href="/calories/" class="btn btn-primary">Calories</a>
 		</div>
 	</div><!-- end row -->
